<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:id="@+id/coinDetail">

	<android.support.v7.widget.CardView
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginEnd="16dp"
		android:id="@+id/prices"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginTop="16dp"
		>

		<include
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			layout="@layout/include_coin_prices"
			android:layout_marginEnd="32dp"
			android:layout_marginBottom="@dimen/text_margin"
			android:layout_marginStart="24dp"
			android:layout_marginTop="@dimen/text_margin"/>

	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:id="@+id/summaryCap"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="16dp"
		app:layout_constraintEnd_toStartOf="@+id/guide50"
		android:layout_marginEnd="8dp"
		app:layout_constraintTop_toBottomOf="@+id/prices"
		android:layout_marginTop="16dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="@dimen/text_margin">

			<TextView
				android:text="@string/coin_detail_cap_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/capTitle"
				android:textAlignment="center"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/capTotal"
				android:textSize="24sp"
				android:textAlignment="center"
				tools:text="123k"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/capDelta"
				android:textSize="24sp"
				android:textAlignment="center"
				tools:text="▲10%"/>

			<TextView
				android:text="@string/coin_detail_supply"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/supply"
				android:layout_marginTop="8dp"
				android:textAlignment="center"/>

			<TextView
				android:text="@string/coin_detail_rank"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/rank"
				android:textAlignment="center"/>
		</LinearLayout>
	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:id="@+id/summaryVol"
		app:layout_constraintStart_toStartOf="@+id/guide50"
		android:layout_marginStart="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginEnd="16dp"
		app:layout_constraintTop_toBottomOf="@+id/prices"
		android:layout_marginTop="16dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="@dimen/text_margin">

			<TextView
				android:text="@string/coin_detail_vol_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/volTotal"
				android:textSize="24sp"
				android:textAlignment="center"
				tools:text="123k"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/volDelta"
				android:textSize="24sp"
				android:textAlignment="center"
				tools:text="▲10%"/>

		</LinearLayout>
	</android.support.v7.widget.CardView>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/supplyTotal"
		android:textAlignment="center"
		app:layout_constraintStart_toStartOf="@+id/summaryCap"
		android:layout_marginStart="8dp"
		app:layout_constraintEnd_toEndOf="@+id/summaryCap"
		android:layout_marginEnd="8dp"
		android:textSize="12sp"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/summaryCap"
		tools:text="@string/coin_detail_cmc_credit"/>

	<TextView
		android:text="@string/coin_detail_cmc_credit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/cmcCredit"
		android:textAlignment="center"
		app:layout_constraintStart_toStartOf="@+id/summaryCap"
		android:layout_marginStart="8dp"
		app:layout_constraintEnd_toEndOf="@+id/summaryCap"
		android:layout_marginEnd="8dp"
		android:textSize="12sp"
		app:layout_constraintTop_toBottomOf="@+id/supplyTotal"
		app:layout_constraintBottom_toBottomOf="@+id/summaryDom"
		/>

	<android.support.v7.widget.CardView
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/summaryVol"
		app:layout_constraintStart_toStartOf="@+id/guide50"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		android:id="@+id/summaryDom">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center_horizontal"
			android:padding="@dimen/text_margin">

			<TextView
				android:text="@string/coin_detail_dominance_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/domDelta"
				android:textSize="24sp"
				android:textAlignment="center"
				tools:text="▲10%"/>
		</LinearLayout>
	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="16dp"
		app:layout_constraintEnd_toStartOf="@+id/guide66"
		android:layout_marginEnd="8dp"
		android:id="@+id/descriptionCard"
		app:layout_constraintTop_toBottomOf="@+id/summaryDom"
		android:layout_marginTop="16dp">

		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:id="@+id/coinDescription"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="16dp"
				android:layout_marginEnd="16dp"
				app:layout_constraintEnd_toEndOf="parent"
				android:textAlignment="viewStart"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintTop_toTopOf="parent"
				android:layout_marginTop="16dp"
				tools:text="Description"
				android:textSize="14sp"/>

			<Button
				android:text="@string/coin_list_more_description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/coinDescriptionMore"
				app:layout_constraintTop_toBottomOf="@+id/coinDescription"
				app:layout_constraintEnd_toEndOf="@+id/coinDescription"
				style="@style/Widget.AppCompat.Button.Borderless.Colored"
				android:minHeight="40dp"
				android:minWidth="0dp"
				android:textSize="12sp"
				app:layout_constraintBottom_toBottomOf="parent"
				android:layout_marginBottom="8dp"
				android:textAlignment="center"
				/>

		</android.support.constraint.ConstraintLayout>
	</android.support.v7.widget.CardView>

	<android.support.constraint.Guideline
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/guide50"
		android:orientation="vertical"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintGuide_percent=".5"/>

	<android.support.constraint.Guideline
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/guide66"
		android:orientation="vertical"
		app:layout_constraintGuide_percent=".66"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

	<android.support.v7.widget.CardView
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginEnd="16dp"
		app:layout_constraintStart_toStartOf="@+id/guide66"
		android:layout_marginStart="8dp"
		android:id="@+id/coinLogoCard"
		app:layout_constraintTop_toTopOf="@+id/descriptionCard"
		>

		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<ImageView
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:id="@+id/coinLogo"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="8dp"
				app:layout_constraintTop_toTopOf="parent"
				android:layout_marginTop="16dp"
				tools:srcCompat="@drawable/ic_attach_money_black_24dp"
				android:contentDescription="@string/coin_list_icon_description"
				android:transitionName="@string/transition_logo"/>

			<Button
				android:text="@string/coin_detail_copy_logo"
				android:layout_width="82dp"
				android:layout_height="wrap_content"
				android:id="@+id/coinLogoCopy"
				style="@style/Widget.AppCompat.Button.Borderless.Colored"
				android:minWidth="0dp"
				android:minHeight="40dp"
				android:layout_marginTop="8dp"
				app:layout_constraintTop_toBottomOf="@+id/coinLogo"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="8dp"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp"
				app:layout_constraintBottom_toBottomOf="parent"
				android:layout_marginBottom="8dp"/>

		</android.support.constraint.ConstraintLayout>
	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:id="@+id/linksCard"
		app:layout_constraintEnd_toStartOf="@+id/guide66"
		android:layout_marginEnd="8dp"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/descriptionCard">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingEnd="@dimen/text_margin"
			android:paddingStart="@dimen/text_margin"
			android:paddingTop="@dimen/item_padding"
			android:paddingBottom="@dimen/item_padding">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<ImageView
					android:layout_width="32dp"
					android:layout_height="32dp"
					app:srcCompat="@drawable/ic_link_black_24dp"
					android:layout_gravity="center_vertical"
					android:contentDescription="@string/coin_detail_links_title"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/websiteDomain"
					android:layout_weight="1"
					tools:text="example.com"
					android:layout_marginStart="@dimen/item_padding"
					android:textAlignment="center"/>

				<Button
					android:text="@string/coin_detail_links_visit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/websiteVisit"
					android:layout_weight="1"
					style="@style/Widget.AppCompat.Button.Borderless.Colored"
					android:minWidth="0dp"
					android:padding="0dp"/>
			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<ImageView
					android:layout_width="32dp"
					android:layout_height="32dp"
					app:srcCompat="@drawable/ic_book_black_24dp"
					android:layout_gravity="center_vertical"
					android:contentDescription="@string/coin_detail_links_whitepaper_title"/>

				<Button
					android:text="@string/coin_detail_links_whitepaper"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:id="@+id/whitepaperVisit"
					android:layout_weight="1"
					style="@style/Widget.AppCompat.Button.Borderless.Colored"
					android:minWidth="0dp"
					android:padding="0dp"/>
			</LinearLayout>
		</LinearLayout>

	</android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
