<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/coinList"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.v7.widget.RecyclerView
		android:id="@+id/coinRecycler"
		android:name="com.georgegarside.cryptovalise.CoinListFragment"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layoutManager="android.support.v7.widget.LinearLayoutManager"
		tools:context="com.georgegarside.cryptovalise.CoinListActivity"
		tools:listitem="@layout/coin_list_content"
		android:paddingBottom="96dp"
		android:clipToPadding="false"/>
</android.support.v4.widget.SwipeRefreshLayout>
