...
	<string name="add_coin_title">Choose a coin</string>
	<string name="add_coin_emptymsg">No more coins are available</string>
	<string name="add_coin_done">Added %1$s</string>
	<string name="add_coin_undone">Removed %1$s</string>
	<string name="coin_detail_missing_description">No description</string>
	<string name="coin_detail_copy_logo">Copy</string>
	<string name="coin_detail_copy_logo_done">Logo copied to the clipboard</string>
	<string name="coin_detail_cap_title">Market Cap $</string>
	<string name="coin_detail_vol_title">24h Volume $</string>
	<string name="coin_detail_supply">Available: %1$s</string>
	<string name="coin_detail_supply_total">Total: %1$s</string>
	<string name="coin_detail_supply_total_unlimited">Unlimited supply</string>
	<string name="coin_detail_rank">Rank: #%1$d</string>
...
